[gd_scene load_steps=45 format=2]

[ext_resource path="res://classes/level_trigger.gd" type="Script" id=1]
[ext_resource path="res://tilesets/world_tileset.gd" type="Script" id=2]
[ext_resource path="res://scenes/player/player.tscn" type="PackedScene" id=3]
[ext_resource path="res://textures/entities/right_enemy.png" type="Texture" id=4]
[ext_resource path="res://scenes/world/right_boss/right_boss.gd" type="Script" id=5]
[ext_resource path="res://textures/environment/tiles.png" type="Texture" id=6]
[ext_resource path="res://scenes/world/right_boss/Boss.gd" type="Script" id=7]
[ext_resource path="res://sounds/boss_damage.wav" type="AudioStream" id=8]

[sub_resource type="ConvexPolygonShape2D" id=5]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=6]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=8]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=9]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=10]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=11]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=12]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=13]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=14]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=15]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=16]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=17]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=18]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=19]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=20]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=21]
points = PoolVector2Array( 16, 16, 0, 16, 0, 4, 16, 4 )

[sub_resource type="ConvexPolygonShape2D" id=22]
points = PoolVector2Array( 12, 16, 0, 16, 0, 4, 12, 4 )

[sub_resource type="ConvexPolygonShape2D" id=23]
points = PoolVector2Array( 12, 16, 0, 16, 0, 0, 12, 0 )

[sub_resource type="ConvexPolygonShape2D" id=24]
points = PoolVector2Array( 12, 12, 0, 12, 0, 0, 12, 0 )

[sub_resource type="ConvexPolygonShape2D" id=25]
points = PoolVector2Array( 16, 12, 0, 12, 0, 0, 16, 0 )

[sub_resource type="ConvexPolygonShape2D" id=26]
points = PoolVector2Array( 4, 0, 16, 0, 16, 12, 4, 12 )

[sub_resource type="ConvexPolygonShape2D" id=27]
points = PoolVector2Array( 4, 0, 16, 0, 16, 16, 4, 16 )

[sub_resource type="ConvexPolygonShape2D" id=28]
points = PoolVector2Array( 16, 16, 4, 16, 4, 4, 16, 4 )

[sub_resource type="ConvexPolygonShape2D" id=29]
points = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="ConvexPolygonShape2D" id=30]
points = PoolVector2Array( 0, 0, 0, 0, 12, 0, 12, 4, 16, 4, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=31]
points = PoolVector2Array( 0, 0, 16, 0, 16, 12, 12, 12, 12, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=32]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 4, 16, 4, 12, 0, 12 )

[sub_resource type="ConvexPolygonShape2D" id=33]
points = PoolVector2Array( 0, 4, 4, 4, 4, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="TileSet" id=34]
0/name = "tiles.png 0"
0/texture = ExtResource( 6 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 16, 16 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "tiles.png 1"
1/texture = ExtResource( 6 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 16, 0, 16, 16 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
4/name = "tiles.png 4"
4/texture = ExtResource( 6 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 32, 0, 80, 48 )
4/tile_mode = 1
4/autotile/bitmask_mode = 1
4/autotile/bitmask_flags = [ Vector2( 0, 1 ), 510, Vector2( 0, 2 ), 447, Vector2( 1, 1 ), 507, Vector2( 1, 2 ), 255, Vector2( 2, 0 ), 432, Vector2( 2, 1 ), 438, Vector2( 2, 2 ), 54, Vector2( 3, 0 ), 504, Vector2( 3, 1 ), 511, Vector2( 3, 2 ), 63, Vector2( 4, 0 ), 216, Vector2( 4, 1 ), 219, Vector2( 4, 2 ), 27 ]
4/autotile/icon_coordinate = Vector2( 3, 1 )
4/autotile/tile_size = Vector2( 16, 16 )
4/autotile/spacing = 0
4/autotile/occluder_map = [  ]
4/autotile/navpoly_map = [  ]
4/autotile/priority_map = [  ]
4/autotile/z_index_map = [  ]
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape = SubResource( 5 )
4/shape_one_way = false
4/shape_one_way_margin = 1.0
4/shapes = [ {
"autotile_coord": Vector2( 2, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 8 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 9 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 10 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 11 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 12 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 3, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 13 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 4, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 14 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 4, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 15 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 3, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 16 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 3, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 17 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 4, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 18 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
4/z_index = 0
5/name = "tiles.png 5"
5/texture = ExtResource( 6 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 16, 16, 16, 16 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape = SubResource( 19 )
5/shape_one_way = false
5/shape_one_way_margin = 1.0
5/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 19 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
5/z_index = 0
6/name = "tiles.png 6"
6/texture = ExtResource( 6 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 0, 16, 16, 16 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape = SubResource( 20 )
6/shape_one_way = false
6/shape_one_way_margin = 1.0
6/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 20 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
6/z_index = 0
7/name = "tiles.png 7"
7/texture = ExtResource( 6 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 32, 48, 80, 48 )
7/tile_mode = 1
7/autotile/bitmask_mode = 1
7/autotile/bitmask_flags = [ Vector2( 0, 1 ), 510, Vector2( 0, 2 ), 447, Vector2( 1, 1 ), 507, Vector2( 1, 2 ), 255, Vector2( 2, 0 ), 432, Vector2( 2, 1 ), 438, Vector2( 2, 2 ), 54, Vector2( 3, 0 ), 504, Vector2( 3, 1 ), 511, Vector2( 3, 2 ), 63, Vector2( 4, 0 ), 216, Vector2( 4, 1 ), 219, Vector2( 4, 2 ), 27 ]
7/autotile/icon_coordinate = Vector2( 3, 1 )
7/autotile/tile_size = Vector2( 16, 16 )
7/autotile/spacing = 0
7/autotile/occluder_map = [  ]
7/autotile/navpoly_map = [  ]
7/autotile/priority_map = [  ]
7/autotile/z_index_map = [  ]
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape_one_way = false
7/shape_one_way_margin = 0.0
7/shapes = [  ]
7/z_index = 0
8/name = "tiles.png 8"
8/texture = ExtResource( 6 )
8/tex_offset = Vector2( 0, 0 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 112, 0, 80, 48 )
8/tile_mode = 1
8/autotile/bitmask_mode = 1
8/autotile/bitmask_flags = [ Vector2( 0, 0 ), 432, Vector2( 0, 1 ), 438, Vector2( 0, 2 ), 54, Vector2( 1, 0 ), 504, Vector2( 1, 1 ), 511, Vector2( 1, 2 ), 63, Vector2( 2, 0 ), 216, Vector2( 2, 1 ), 219, Vector2( 2, 2 ), 27, Vector2( 3, 0 ), 255, Vector2( 3, 1 ), 507, Vector2( 4, 0 ), 447, Vector2( 4, 1 ), 510 ]
8/autotile/icon_coordinate = Vector2( 1, 1 )
8/autotile/tile_size = Vector2( 16, 16 )
8/autotile/spacing = 0
8/autotile/occluder_map = [  ]
8/autotile/navpoly_map = [  ]
8/autotile/priority_map = [  ]
8/autotile/z_index_map = [  ]
8/occluder_offset = Vector2( 0, 0 )
8/navigation_offset = Vector2( 0, 0 )
8/shape_offset = Vector2( 0, 0 )
8/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
8/shape = SubResource( 21 )
8/shape_one_way = false
8/shape_one_way_margin = 1.0
8/shapes = [ {
"autotile_coord": Vector2( 1, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 21 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 22 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 23 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 24 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 25 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 26 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 27 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 28 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 29 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 3, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 30 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 3, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 31 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 4, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 32 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 4, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 33 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
8/z_index = 0
9/name = "tiles.png 9"
9/texture = ExtResource( 6 )
9/tex_offset = Vector2( 0, 0 )
9/modulate = Color( 1, 1, 1, 1 )
9/region = Rect2( 112, 48, 16, 16 )
9/tile_mode = 0
9/occluder_offset = Vector2( 0, 0 )
9/navigation_offset = Vector2( 0, 0 )
9/shape_offset = Vector2( 0, 0 )
9/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
9/shape_one_way = false
9/shape_one_way_margin = 0.0
9/shapes = [  ]
9/z_index = 0
10/name = "tiles.png 10"
10/texture = ExtResource( 6 )
10/tex_offset = Vector2( 0, 0 )
10/modulate = Color( 1, 1, 1, 1 )
10/region = Rect2( 128, 48, 16, 16 )
10/tile_mode = 0
10/occluder_offset = Vector2( 0, 0 )
10/navigation_offset = Vector2( 0, 0 )
10/shape_offset = Vector2( 0, 0 )
10/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
10/shape_one_way = false
10/shape_one_way_margin = 0.0
10/shapes = [  ]
10/z_index = 0
script = ExtResource( 2 )

[sub_resource type="RectangleShape2D" id=41]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=42]

[sub_resource type="Animation" id=43]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=44]
resource_name = "attack"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}

[sub_resource type="Animation" id=45]
resource_name = "death"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}

[sub_resource type="Animation" id=46]
resource_name = "idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="RectangleShape2D" id=40]
extents = Vector2( 16, 24 )

[node name="RightBoss" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
_active_camera_path = NodePath("YSort/Player/CamerMovementOffset/Camera2D")
level_music = "res://music/something_is_near.mp3"

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 34 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( -1, 4, 2, -65536, 4, 3, -65535, 4, 3, -65534, 4, 3, -65533, 4, 3, -65532, 4, 3, -65531, 4, 3, -65530, 4, 3, -65529, 4, 3, -65528, 4, 3, -65527, 4, 3, -65526, 4, 3, -65525, 4, 3, -65524, 4, 3, -65523, 4, 3, -65522, 4, 3, -65521, 4, 3, -65520, 4, 3, -65519, 4, 3, -65518, 4, 3, -65517, 4, 3, -65516, 4, 3, -65515, 4, 4, 65535, 4, 65538, 0, 4, 65539, 1, 4, 65539, 2, 4, 65539, 3, 4, 65539, 4, 4, 65539, 5, 4, 65539, 6, 4, 65539, 7, 4, 65539, 8, 4, 65539, 9, 4, 65539, 10, 4, 65539, 11, 4, 65539, 12, 4, 65539, 13, 4, 65539, 14, 4, 65539, 15, 4, 65539, 16, 4, 65539, 17, 4, 65539, 18, 4, 65539, 19, 4, 65539, 20, 4, 65539, 21, 4, 65540, 131071, 4, 65538, 65536, 4, 131073, 65537, 4, 131075, 65538, 4, 131075, 65539, 4, 131075, 65540, 4, 131075, 65541, 4, 131075, 65542, 4, 131075, 65543, 4, 131075, 65544, 4, 131075, 65545, 4, 131075, 65546, 4, 131075, 65547, 4, 131075, 65548, 4, 131075, 65549, 4, 131075, 65550, 4, 131075, 65551, 4, 131075, 65552, 4, 131075, 65553, 4, 131075, 65554, 4, 131075, 65555, 4, 131075, 65556, 4, 131072, 65557, 4, 65540, 196607, 4, 65538, 131072, 4, 65540, 131073, 8, 0, 131074, 8, 1, 131075, 8, 2, 131076, 5, 0, 131077, 7, 2, 131078, 7, 3, 131079, 7, 3, 131080, 7, 4, 131081, 5, 0, 131082, 8, 0, 131083, 8, 2, 131084, 5, 0, 131085, 7, 2, 131086, 7, 4, 131087, 5, 0, 131088, 7, 2, 131089, 7, 4, 131090, 5, 0, 131091, 5, 0, 131092, 4, 65538, 131093, 4, 65540, 262143, 4, 131074, 196608, 4, 131076, 196609, 8, 131072, 196610, 8, 131073, 196611, 8, 131074, 196612, 7, 2, 196613, 7, 65539, 196614, 7, 131075, 196615, 7, 131072, 196616, 7, 65537, 196617, 7, 4, 196618, 8, 131072, 196619, 8, 131074, 196620, 7, 2, 196621, 7, 65536, 196622, 7, 65537, 196623, 7, 3, 196624, 7, 65536, 196625, 7, 65537, 196626, 7, 3, 196627, 7, 4, 196628, 4, 65538, 196629, 4, 65540, 327679, 0, 0, 262144, 0, 0, 262145, 7, 2, 262146, 7, 3, 262147, 7, 3, 262148, 7, 65536, 262149, 7, 65540, 262150, 5, 0, 262151, 7, 65538, 262152, 7, 65539, 262153, 7, 65537, 262154, 7, 3, 262155, 7, 3, 262156, 7, 65536, 262157, 7, 65539, 262158, 7, 65539, 262159, 7, 65539, 262160, 7, 65539, 262161, 7, 65539, 262162, 7, 65539, 262163, 7, 65540, 262164, 4, 65538, 262165, 4, 65540, 393215, 0, 0, 327680, 0, 0, 327681, 7, 65538, 327682, 7, 65539, 327683, 7, 65539, 327684, 7, 65539, 327685, 7, 65537, 327686, 7, 3, 327687, 7, 65536, 327688, 7, 131073, 327689, 7, 131075, 327690, 7, 131075, 327691, 7, 131075, 327692, 7, 131072, 327693, 7, 65539, 327694, 7, 65539, 327695, 7, 65539, 327696, 7, 131073, 327697, 7, 131075, 327698, 7, 131075, 327699, 7, 131076, 327700, 4, 65538, 327701, 4, 65540, 458751, 0, 0, 393216, 0, 0, 393217, 7, 131074, 393218, 7, 131075, 393219, 7, 131072, 393220, 7, 65539, 393221, 7, 65539, 393222, 7, 65539, 393223, 7, 131073, 393224, 7, 131076, 393225, 8, 0, 393226, 8, 1, 393227, 8, 2, 393228, 7, 131074, 393229, 7, 131075, 393230, 7, 131075, 393231, 7, 131075, 393232, 7, 131076, 393233, 8, 0, 393234, 8, 1, 393235, 8, 2, 393236, 4, 65538, 393237, 4, 65540, 524287, 4, 2, 458752, 4, 4, 458753, 5, 0, 458754, 6, 0, 458755, 7, 131074, 458756, 7, 131075, 458757, 7, 131075, 458758, 7, 131075, 458759, 7, 131076, 458760, 5, 0, 458761, 8, 131072, 458762, 8, 131073, 458763, 8, 131074, 458764, 5, 0, 458765, 5, 0, 458766, 5, 0, 458767, 5, 0, 458768, 5, 0, 458769, 8, 131072, 458770, 8, 131073, 458771, 8, 131074, 458772, 4, 65538, 458773, 4, 65540, 589823, 4, 65538, 524288, 4, 65537, 524289, 4, 3, 524290, 4, 3, 524291, 4, 3, 524292, 4, 3, 524293, 4, 3, 524294, 4, 3, 524295, 4, 3, 524296, 4, 3, 524297, 4, 3, 524298, 4, 3, 524299, 4, 3, 524300, 4, 3, 524301, 4, 3, 524302, 4, 3, 524303, 4, 3, 524304, 4, 3, 524305, 4, 3, 524306, 4, 3, 524307, 4, 3, 524308, 4, 65536, 524309, 4, 65540, 655359, 4, 131074, 589824, 4, 131075, 589825, 4, 131075, 589826, 4, 131075, 589827, 4, 131075, 589828, 4, 131075, 589829, 4, 131075, 589830, 4, 131075, 589831, 4, 131075, 589832, 4, 131075, 589833, 4, 131075, 589834, 4, 131075, 589835, 4, 131075, 589836, 4, 131075, 589837, 4, 131075, 589838, 4, 131075, 589839, 4, 131075, 589840, 4, 131075, 589841, 4, 131075, 589842, 4, 131075, 589843, 4, 131075, 589844, 4, 131075, 589845, 4, 131076 )

[node name="YSort" type="YSort" parent="."]

[node name="Boss" type="StaticBody2D" parent="YSort" groups=["enemy"]]
position = Vector2( 264, 72 )
script = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="YSort/Boss"]
shape = SubResource( 41 )

[node name="Sprite" type="Sprite" parent="YSort/Boss"]
texture = ExtResource( 4 )
hframes = 4
frame = 2

[node name="HitBox" type="Area2D" parent="YSort/Boss" groups=["hit_box"]]
collision_layer = 16
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="YSort/Boss/HitBox"]
shape = SubResource( 42 )

[node name="DamageSound" type="AudioStreamPlayer" parent="YSort/Boss"]
stream = ExtResource( 8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="YSort/Boss"]
anims/RESET = SubResource( 43 )
anims/attack = SubResource( 44 )
anims/death = SubResource( 45 )
anims/idle = SubResource( 46 )

[node name="AttackTimer" type="Timer" parent="YSort/Boss"]
wait_time = 5.0
one_shot = true

[node name="Player" parent="YSort" instance=ExtResource( 3 )]
position = Vector2( 8, 88 )

[node name="CamerMovementOffset" type="Position2D" parent="YSort/Player"]
position = Vector2( 0, -12 )

[node name="Camera2D" type="Camera2D" parent="YSort/Player/CamerMovementOffset"]
current = true

[node name="CameraBounds" type="Control" parent="."]
margin_right = 336.0
margin_bottom = 144.0

[node name="LevelTrigger" type="Area2D" parent="."]
position = Vector2( -16, 64 )
script = ExtResource( 1 )
scene_path = "res://scenes/world/forest_river/forest_river.tscn"
player_position = Vector2( 328, 88 )
player_facing_direction = Vector2( -1, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="LevelTrigger"]
position = Vector2( 0, 24 )
shape = SubResource( 40 )

[connection signal="boss_died" from="YSort/Boss" to="." method="_on_Boss_boss_died"]
[connection signal="animation_finished" from="YSort/Boss/AnimationPlayer" to="YSort/Boss" method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="YSort/Boss/AttackTimer" to="YSort/Boss" method="_on_AttackTimer_timeout"]
